--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytest = "*"
 django = "*"
 python-dotenv = "*"
 twine = "*"
+pydoc-markdown = "*"
 
 [packages]
 django-atrium = {editable = true,path = "."}
