--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "==2.4.4"
-yapf = "==0.29.0"
-pytype = "==2020.1.8"
-pydocstyle = "==5.0.2"
-pdoc3 = "==0.7.4"
-django = "==2.2.9"
-python-dotenv = "==0.10.3"
+django = "*"
+pdoc3 = "*"
+pydocstyle = "*"
+pytype = "*"
 
 [packages]
 django-atrium = {editable = true,path = "."}
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
