--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
 pdoc3 = "*"
 pydocstyle = "*"
+pytest = "*"
 pytype = "*"
 
 [packages]
