--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           pipenv install flake8
           pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          pipenv run flake8 . --count --exit-zero --max-complexity=10 --statistics
+          pipenv run flake8 . --count --ignore=E501 --exit-zero --max-complexity=10 --statistics
       - name: Test with pytest
         env:
           ATRIUM_API_KEY: ${{ secrets.ATRIUM_API_KEY }}
