--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,10 @@ jobs:
           pipenv install flake8
           pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           pipenv run flake8 . --count --ignore=E501 --exit-zero --max-complexity=10 --statistics
+      - name: Check styling with pydocstyle
+        run: |
+          pipenv install pydocstyle
+          pipenv run pydocstyle
       - name: Test with pytest
         env:
           ATRIUM_API_KEY: ${{ secrets.ATRIUM_API_KEY }}
